--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,13 @@
         <junit.version>5.8.2</junit.version>
     </properties>
 
+    <repositories>
+        <repository>
+            <id>confluent</id>
+            <url>https://packages.confluent.io/maven/</url>
+        </repository>
+    </repositories>
+
     <dependencies>
         <dependency>
             <groupId>org.slf4j</groupId>
@@ -35,6 +42,30 @@
             <artifactId>kafka-clients</artifactId>
             <version>4.0.0</version>
         </dependency>
+
+        <!-- Avro Tools -->
+        <!-- https://mvnrepository.com/artifact/org.apache.avro/avro-tools -->
+        <dependency>
+            <groupId>org.apache.avro</groupId>
+            <artifactId>avro-tools</artifactId>
+            <version>1.12.0</version>
+        </dependency>
+
+        <!-- Avro Core (기본 Avro 라이브러리) -->
+        <dependency>
+            <groupId>org.apache.avro</groupId>
+            <artifactId>avro</artifactId>
+            <version>1.12.0</version>
+        </dependency>
+
+<!-- Maven Avro Plugin (스키마에서 Java 클래스 생성용) -->
+
+        <dependency>
+            <groupId>io.confluent</groupId>
+            <artifactId>kafka-streams-avro-serde</artifactId>
+            <version>7.9.1</version>
+        </dependency>
+
 
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
@@ -74,9 +105,6 @@
             <artifactId>jackson-databind</artifactId>
             <version>2.16.0</version>
         </dependency>
-
-
-
 
 
         <dependency>
@@ -130,6 +158,26 @@
 
     <build>
         <plugins>
+
+            <plugin>
+              <groupId>org.apache.avro</groupId>
+              <artifactId>avro-maven-plugin</artifactId>
+              <version>1.12.0</version>
+              <configuration>
+                <sourceDirectory>${project.basedir}/src/main/avro/</sourceDirectory>
+                <outputDirectory>${project.basedir}/src/main/java/</outputDirectory>
+              </configuration>
+              <executions>
+                <execution>
+                  <phase>generate-sources</phase>
+                  <goals>
+                    <goal>schema</goal>
+                  </goals>
+                </execution>
+              </executions>
+            </plugin>
+
+
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-war-plugin</artifactId>
